fix(config) : gap in inputs

--- a/src/modulos/Config/DefaulterConfig/DefaulterConfig.module.css
+++ b/src/modulos/Config/DefaulterConfig/DefaulterConfig.module.css
@@ -23,7 +23,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+   
     background-color: #333536;
     padding: 1rem;
     border-radius: 1rem;
@@ -57,7 +57,7 @@
   .saveButtonContainer {
     display: flex;
     justify-content: flex-end;
-    margin-top: 1.5rem;
+    
   }
   
   .saveButton {
