--- a/src/modulos/Config/PaymentsConfig/PaymentsConfig.module.css
+++ b/src/modulos/Config/PaymentsConfig/PaymentsConfig.module.css
@@ -67,7 +67,6 @@
   .inputContainer {
     display: flex;
     gap: 0.75rem;
-    margin-bottom: 0.75rem;
     width: 100%;
   }
   
@@ -95,7 +94,7 @@
   .saveButtonContainer {
     display: flex;
     justify-content: flex-end;
-    margin-top: 1.5rem;
+   
   }
   
   .saveButton {
